--- a/abstract.tex
+++ b/abstract.tex
@@ -10,7 +10,7 @@
 
 The triple-axis spectrometer (TAS) \cite{Shirane2002} was invented by B. Brockhouse in the 1950s and 
 is among the foremost measurement methods in the field of inelastic neutron scattering. 
-It enables the probing of vibrational (phonon) or magnetic (magnon) excitations in single crystals and allows 
+It enables the probing of vibrational (phonon) or magnetic (magnon) excitations in single-crystals and allows 
 mappings of their dispersion relations, i.e. their energy-momentum relation, $E\left( \bm{Q} \right)$.
 
 The three axes of a TAS are offset by relative angles to one another, and comprise 
